--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.0.25",
+  "version": "5.0.26",
   "main": "index.js",
   "private": true,
   "author": {
@@ -17,34 +17,35 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-links": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
-    "@storybook/react": "^3.4.8",
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
+    "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-preset-react-app": "^3.1.2",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "immutable": "^3.8.2",
-    "jsdom": "^11.11.0",
+    "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^11.9.0",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.2",
-    "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.4.1",
-    "replace-in-file": "^3.4.0",
+    "react-scripts": "^1.1.5",
+    "react-test-renderer": "^16.5.0",
+    "replace-in-file": "^3.4.2",
     "serve": "^8.2.0",
-    "sinon": "^6.1.3",
+    "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
     "source-map-explorer": "^1.5.0"
   },
@@ -62,8 +63,8 @@
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-loadable": "^5.4.0",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.0.7",
@@ -76,16 +77,16 @@
     "semantic-ui-react": "0.78.2"
   },
   "scripts": {
-    "start": "SET BROWSER=none&react-scripts start",
+    "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint src/ || exit 0",
     "lint-fix": "eslint src/ || exit 0",
-    "test": "SET NODE_ENV=test& mocha",
-    "test-watch": "SET NODE_ENV=test& mocha --reporter list --watch --watch-extensions jsx",
-    "test-debug": "SET NODE_ENV=test& mocha --inspect-brk",
-    "test-coverage": "SET NODE_ENV=test& nyc --extension .jsx mocha",
+    "test": "cross-env NODE_ENV=test mocha",
+    "test-watch": "cross-env NODE_ENV=test mocha --reporter list --watch --watch-extensions jsx",
+    "test-debug": "cross-env NODE_ENV=test mocha --inspect-brk",
+    "test-coverage": "cross-env NODE_ENV=test nyc --extension .jsx mocha",
     "test-jest": "react-scripts test --runInBand --env=jsdom",
     "test-jest-debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
     "test-jest-coverage": "react-scripts test --coverage --env=jsdom",
