--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,13 @@
-image: node:6.4.0
+image: node:latest
+
+# Cache modules between builds
+cache:
+  paths:
+  - node_modules/
+
+before_script:
+  - npm install
 
 all_tests:
   script:
-   - npm install
    - npm run test
