--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
+    "docker-build": "docker build -t speed-reading .",
+    "docker-run": "docker run speed-reading",
     "build": "react-scripts build",
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
