--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "react/jsx-wrap-multilines": 0,
     "react/no-access-state-in-setstate": 0,
     "object-curly-newline": 0,
+    "jsx-a11y/label-has-for": 0,
     "operator-linebreak": 0,
     "import/no-named-as-default": 0,
     "import/no-extraneous-dependencies": [
