--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-links": "^v4.0.0-alpha.24",
     "@storybook/addons": "^v4.0.0-alpha.24",
     "@storybook/react": "^v4.0.0-alpha.24",
+    "@babel/register": "^7.0.0",
     "canvas-prebuilt": "^1.6.11",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
@@ -99,9 +100,6 @@
   "babel": {
     "presets": [
       "react-app"
-    ],
-    "plugins": [
-      "transform-es2015-modules-commonjs"
     ]
   },
   "browserslist": [
