--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,10 @@ cache:
   paths:
   - node_modules/
 
-before_script:
-  - npm install
+build:
+  stage: build
+  script:
+   - npm install
 
 test:
   stage: test
