--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,20 +20,36 @@ coverage:
   stage: test
   script:
    - npm run test-coverage
-
-code_quality:
-  image: docker:stable
-  variables:
-    DOCKER_DRIVER: overlay2
-  allow_failure: true
-  services:
-    - docker:stable-dind
-  script:
-    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
-    - docker run
-        --env SOURCE_CODE="$PWD"
-        --volume "$PWD":/code
-        --volume /var/run/docker.sock:/var/run/docker.sock
-        "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
   artifacts:
-    paths: [gl-code-quality-report.json]
+    paths:
+      - coverage/
+
+pages:
+  stage: deploy
+  dependencies:
+    - coverage
+  script:
+    - mv coverage/ public/
+  artifacts:
+    paths:
+      - public
+    expire_in: 30 days
+  only:
+    - dev
+
+##code_quality:
+##  image: docker:stable
+##  variables:
+##    DOCKER_DRIVER: overlay2
+##  allow_failure: true
+##  services:
+##    - docker:stable-dind
+##  script:
+##    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+##    - docker run
+##        --env SOURCE_CODE="$PWD"
+##        --volume "$PWD":/code
+##        --volume /var/run/docker.sock:/var/run/docker.sock
+##        "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
+##  artifacts:
+##    paths: [gl-code-quality-report.json]
