--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^v4.0.0-alpha.24",
-    "@storybook/addon-links": "^v4.0.0-alpha.24",
-    "@storybook/addons": "^v4.0.0-alpha.24",
-    "@storybook/react": "^v4.0.0-alpha.24",
+    "@storybook/addon-actions": "4.0.2",
+    "@storybook/addon-links": "4.0.2",
+    "@storybook/addons": "4.0.2",
+    "@storybook/react": "4.0.2",
     "@babel/register": "^7.0.0",
     "canvas-prebuilt": "^1.6.11",
     "chai": "^4.2.0",
@@ -28,7 +28,7 @@
     "cross-env": "^5.2.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "5.6.0",
+    "eslint": "5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -40,11 +40,11 @@
     "nyc": "^13.1.0",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.2",
-    "react-scripts": "^2.0.5",
-    "react-test-renderer": "^16.5.2",
+    "react-scripts": "^2.1.1",
+    "react-test-renderer": "^16.6.0",
     "replace-in-file": "^3.4.2",
     "serve": "^10.0.2",
-    "sinon": "^7.0.0",
+    "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
     "source-map-explorer": "^1.6.0"
   },
@@ -62,18 +62,18 @@
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "^2.17.5",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "rheostat": "^2.2.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.82.5"
+    "semantic-ui-react": "0.83.0"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
