--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "4.0.2",
-    "@storybook/addon-links": "4.0.2",
-    "@storybook/addons": "4.0.2",
-    "@storybook/react": "4.0.2",
+    "@storybook/addon-actions": "^4.0.4",
+    "@storybook/addon-links": "^4.0.4",
+    "@storybook/addons": "^4.0.4",
+    "@storybook/react": "^4.0.4",
     "@babel/register": "^7.0.0",
     "canvas-prebuilt": "^1.6.11",
     "chai": "^4.2.0",
@@ -41,7 +41,7 @@
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.2",
     "react-scripts": "^2.1.1",
-    "react-test-renderer": "^16.6.0",
+    "react-test-renderer": "^16.6.1",
     "replace-in-file": "^3.4.2",
     "serve": "^10.0.2",
     "sinon": "^7.1.1",
@@ -62,8 +62,8 @@
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "^2.17.5",
     "react-redux": "^5.1.0",
