--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,9 @@
     "react/destructuring-assignment": 0,
     "react/jsx-wrap-multilines": 0,
     "react/no-access-state-in-setstate": 0,
+    "import/no-extraneous-dependencies": ["error", {
+      "devDependencies": true
+    }],
     "object-curly-newline": 0,
     "jsx-a11y/label-has-for": 0,
     "operator-linebreak": 0,
