--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^4.0.4",
+    "@storybook/addon-options": "^4.0.4",
+    "@storybook/addon-centered": "^4.0.4",
     "@storybook/addon-links": "^4.0.4",
+    "@storybook/addon-actions": "^4.0.4",
+    "@storybook/addon-console": "^1.1.0",
+    "@storybook/addon-knobs": "^4.0.4",
+    "@storybook/addon-viewport": "^4.0.4",
+    "@storybook/addon-a11y": "^4.0.4",
+    "@storybook/addon-notes": "^4.0.4",
     "@storybook/addons": "^4.0.4",
     "@storybook/react": "^4.0.4",
     "@babel/register": "^7.0.0",
@@ -28,7 +35,7 @@
     "cross-env": "^5.2.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "5.8.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -64,9 +71,10 @@
     "html2canvas": "^1.0.0-alpha.12",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-ga": "^2.5.3",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "^2.17.5",
-    "react-redux": "^5.1.0",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
