--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kiirlugemine 5.0",
+  "name": "Kiirlugemine 5.1",
   "short_name": "Kiirlugemine",
   "start_url": "./index.html",
   "display": "standalone",
@@ -7,35 +7,35 @@
   "background_color": "#ffffff",
   "description": "Lugemiskiiruse arendamise rakendus",
   "icons": [{
-    "src": "../src/assets/icon/book48.png",
+    "src": "/icon/book48.png",
     "sizes": "48x48",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book72.png",
+    "src": "/icon/book72.png",
     "sizes": "72x72",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book96.png",
+    "src": "/icon/book96.png",
     "sizes": "96x96",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book144.png",
+    "src": "/icon/book144.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book168.png",
+    "src": "/icon/book168.png",
     "sizes": "168x168",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book192.png",
+    "src": "/icon/book192.png",
     "sizes": "192x192",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book256.png",
+    "src": "/icon/book256.png",
     "sizes": "256x256",
     "type": "image/png"
   }, {
-    "src": "../src/assets/icon/book512.png",
+    "src": "/icon/book512.png",
     "sizes": "512x512",
     "type": "image/png"
   }]
