--- a/package.json
+++ b/package.json
@@ -17,31 +17,31 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@storybook/addon-options": "^4.0.7",
+    "@babel/register": "^7.0.0",
+    "@storybook/addon-a11y": "^4.0.7",
+    "@storybook/addon-actions": "^4.0.7",
     "@storybook/addon-centered": "^4.0.7",
-    "@storybook/addon-links": "^4.0.7",
-    "@storybook/addon-actions": "^4.0.4",
     "@storybook/addon-console": "^1.1.0",
     "@storybook/addon-knobs": "^4.0.7",
-    "@storybook/addon-viewport": "^4.0.7",
-    "@storybook/addon-a11y": "^4.0.7",
+    "@storybook/addon-links": "^4.0.7",
     "@storybook/addon-notes": "^4.0.7",
+    "@storybook/addon-options": "^4.0.7",
+    "@storybook/addon-viewport": "^4.0.7",
     "@storybook/addons": "^4.0.7",
     "@storybook/react": "^4.0.7",
-    "@babel/register": "^7.0.0",
-    "canvas-prebuilt": "^1.6.11",
+    "canvas": "^2.1.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^5.2.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^3.8.2",
-    "jsdom": "^12.2.0",
+    "jsdom": "^13.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
@@ -73,7 +73,7 @@
     "react-dom": "^16.6.3",
     "react-ga": "^2.5.3",
     "react-loadable": "^5.5.0",
-    "react-localize-redux": "^2.17.5",
+    "react-localize-redux": "2.17.5",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
