--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.9",
+  "version": "5.1.10",
   "main": "index.js",
   "private": true,
   "author": {
@@ -18,46 +18,46 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.0.0",
-    "@storybook/addon-a11y": "^4.0.10",
-    "@storybook/addon-actions": "^4.0.10",
-    "@storybook/addon-centered": "^4.0.10",
+    "@storybook/addon-a11y": "^4.1.4",
+    "@storybook/addon-actions": "^4.1.4",
+    "@storybook/addon-centered": "^4.1.4",
     "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-knobs": "^4.0.10",
-    "@storybook/addon-links": "^4.0.10",
-    "@storybook/addon-notes": "^4.0.10",
-    "@storybook/addon-options": "^4.0.10",
-    "@storybook/addon-viewport": "^4.0.10",
-    "@storybook/addons": "^4.0.10",
-    "@storybook/react": "^4.0.10",
-    "canvas": "^2.1.0",
+    "@storybook/addon-knobs": "^4.1.4",
+    "@storybook/addon-links": "^4.1.4",
+    "@storybook/addon-notes": "^4.1.4",
+    "@storybook/addon-options": "^4.1.4",
+    "@storybook/addon-viewport": "^4.1.4",
+    "@storybook/addons": "^4.1.4",
+    "@storybook/react": "^4.1.4",
+    "canvas": "2.1.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "cross-env": "^5.2.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "eslint": "^5.9.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^3.8.2",
-    "jsdom": "^13.0.0",
+    "jsdom": "^13.1.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "pixelmatch": "^4.0.2",
     "prop-types": "^15.6.2",
-    "react-scripts": "^2.1.1",
-    "react-test-renderer": "^16.6.3",
+    "react-scripts": "^2.1.2",
+    "react-test-renderer": "^16.7.0",
     "replace-in-file": "^3.4.2",
     "serve": "^10.1.1",
-    "sinon": "^7.1.1",
+    "sinon": "^7.2.2",
     "sinon-chai": "^3.3.0",
     "source-map-explorer": "^1.6.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "connected-react-router": "^4.5.0",
+    "connected-react-router": "^6.0.0",
     "d3-array": "^1.2.4",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.3.2",
@@ -69,19 +69,19 @@
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "2.17.5",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "rheostat": "^2.2.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.83.0"
+    "semantic-ui-react": "0.84.0"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
