--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-viewport": "^4.1.4",
     "@storybook/addons": "^4.1.4",
     "@storybook/react": "^4.1.4",
+    "axios-mock-adapter": "^1.15.0",
     "canvas": "2.1.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
@@ -58,7 +59,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^6.1.0",
-    "d3-array": "^2.0.2",
+    "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.3.2",
     "d3-scale": "^2.1.2",
