--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@storybook/addon-viewport": "^4.1.4",
     "@storybook/addons": "^4.1.4",
     "@storybook/react": "^4.1.4",
-    "axios-mock-adapter": "^1.15.0",
+    "axios-mock-adapter": "^1.16.0",
     "canvas": "2.1.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
@@ -40,7 +40,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.0",
+    "eslint-plugin-react": "^7.12.2",
     "immutable": "^3.8.2",
     "jsdom": "^13.1.0",
     "jsdom-global": "^3.0.2",
@@ -62,6 +62,7 @@
     "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.3.2",
+    "d3-interpolate-path": "^2.0.1",
     "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
     "d3-shape": "^1.2.2",
@@ -80,6 +81,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "regression": "^2.0.1",
     "rheostat": "^2.2.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.84.0"
