--- a/package.json
+++ b/package.json
@@ -36,21 +36,24 @@
     "cross-env": "^5.2.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.12.0",
+    "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "immutable": "^3.8.2",
     "jsdom": "^13.1.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "pixelmatch": "^4.0.2",
+    "prettier": "^1.16.0",
     "prop-types": "^15.6.2",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.7.0",
-    "replace-in-file": "^3.4.2",
+    "replace-in-file": "^3.4.3",
     "serve": "^10.1.1",
     "sinon": "^7.2.2",
     "sinon-chai": "^3.3.0",
