--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,42 @@
 {
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "prettier", "prettier/react"],
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "jest": true,
-    "jasmine": true,
-    "mocha": true
+    "jest": true
   },
   "rules": {
     "arrow-parens": "off",
     "max-len": ["error", 120],
-    "linebreak-style": 0,
-    "react/prop-types": 0,
-    "react/destructuring-assignment": 0,
-    "react/jsx-wrap-multilines": 0,
-    "react/no-access-state-in-setstate": 0,
+    "linebreak-style": "off",
+    "react/prop-types": "off",
+    "react/destructuring-assignment": "off",
+    "react/jsx-wrap-multilines": "off",
+    "react/no-access-state-in-setstate": "off",
     "import/no-extraneous-dependencies": [
       "error",
       {
         "devDependencies": true
       }
     ],
-    "object-curly-newline": 0,
-    "jsx-a11y/label-has-for": 0,
-    "operator-linebreak": 0,
-    "import/no-named-as-default": 0,
-    "no-console": [
+    "object-curly-newline": "off",
+    "jsx-a11y/label-has-for": "off",
+    "import/no-named-as-default": "off",
+    "no-console": "off",
+    "prettier/prettier": [
       "error",
       {
-        "allow": ["log"]
+        "printWidth": 120,
+        "trailingComma": "all",
+        "tabWidth": 2,
+        "semi": true,
+        "singleQuote": true,
+        "arrowParens": "always",
+        "bracketSpacing": true,
+        "jsxSingleQuote": false,
+        "jsxBracketSameLine": false
       }
     ]
-  }
+  },
+  "plugins": ["html", "prettier", "react-hooks"]
 }
