--- a/package.json
+++ b/package.json
@@ -18,44 +18,49 @@
   ],
   "devDependencies": {
     "@babel/register": "^7.0.0",
-    "@storybook/addon-a11y": "^4.1.13",
-    "@storybook/addon-actions": "^4.1.13",
-    "@storybook/addon-centered": "^4.1.13",
+    "@storybook/addon-a11y": "^5.0.2",
+    "@storybook/addon-actions": "^5.0.2",
+    "@storybook/addon-centered": "^5.0.2",
     "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-knobs": "^4.1.13",
-    "@storybook/addon-links": "^4.1.13",
-    "@storybook/addon-notes": "^4.1.13",
-    "@storybook/addon-options": "^4.1.13",
-    "@storybook/addon-viewport": "^4.1.13",
-    "@storybook/addons": "^4.1.13",
-    "@storybook/react": "^4.1.13",
+    "@storybook/addon-knobs": "^5.0.2",
+    "@storybook/addon-links": "^5.0.2",
+    "@storybook/addon-notes": "^5.0.2",
+    "@storybook/addon-viewport": "^5.0.2",
+    "@storybook/addons": "^5.0.2",
+    "@storybook/react": "^5.0.2",
     "axios-mock-adapter": "^1.16.0",
+    "babel-eslint": "^10.0.1",
     "canvas": "2.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.2",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.1",
     "immutable": "^3.8.2",
-    "jest-dom": "^3.1.2",
+    "jest-dom": "^3.1.3",
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
     "nyc": "^13.3.0",
     "pixelmatch": "^4.0.2",
+    "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.7.0",
     "react-testing-library": "^6.0.0",
-    "replace-in-file": "^3.4.3",
+    "replace-in-file": "^3.4.4",
     "serve": "^10.1.2",
-    "source-map-explorer": "^1.7.0",
-    "workbox-build": "^4.0.0"
+    "source-map-explorer": "^1.8.0",
+    "workbox-build": "^4.1.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "connected-react-router": "^6.3.1",
+    "connected-react-router": "^6.3.2",
     "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.3.2",
@@ -81,7 +86,7 @@
     "regression": "^2.0.1",
     "rheostat": "^2.2.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.85.0"
+    "semantic-ui-react": "0.86.0"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
@@ -93,7 +98,7 @@
     "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint src/ || exit 0",
-    "lint-fix": "eslint src/ -- --fix || exit 0",
+    "lint-fix": "eslint src/ --fix || exit 0",
     "test": "react-scripts test --env=jest-environment-jsdom-with-canvas",
     "test-no-watch": "react-scripts test --watchAll=false --env=jest-environment-jsdom-with-canvas",
     "test-debug": "react-scripts --inspect-brk test --env=jest-environment-jsdom-with-canvas --runInBand",
