--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiirlugemine",
   "description": "Software for improving reading speed",
-  "version": "5.1.15",
+  "version": "5.1.20",
   "main": "index.js",
   "private": true,
   "author": {
@@ -96,7 +96,7 @@
     "docker-run": "docker run speed-reading",
     "build-sw": "node ./src/sw-build.js",
     "build": "react-scripts build && npm run build-sw",
-    "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && react-scripts build",
+    "build-patch": "npm version patch --no-commit-hooks --no-git-tag-version && node ./replace.build.js && npm run build",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "eslint src/ || exit 0",
     "lint-fix": "eslint src/ --fix || exit 0",
