--- a/package.json
+++ b/package.json
@@ -17,50 +17,51 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@babel/register": "^7.4.0",
-    "@storybook/addon-a11y": "^5.2.8",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-centered": "^5.2.8",
+    "@babel/register": "^7.8.3",
+    "@storybook/addon-a11y": "^5.3.13",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-centered": "^5.3.13",
     "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addon-notes": "^5.2.8",
-    "@storybook/addon-viewport": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "axios-mock-adapter": "^1.16.0",
+    "@storybook/addon-knobs": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/addon-notes": "^5.3.13",
+    "@storybook/addon-viewport": "^5.3.13",
+    "@storybook/addons": "^5.3.13",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.13",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
+    "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
     "canvas": "2.1.0",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "immutable": "^3.8.2",
-    "jest-dom": "^3.1.3",
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
-    "nyc": "^14.1.1",
-    "pixelmatch": "^4.0.2",
-    "prettier": "^1.16.4",
+    "nyc": "^15.0.0",
+    "pixelmatch": "^5.1.0",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "react-scripts": "^2.1.8",
-    "react-test-renderer": "^16.7.0",
-    "react-testing-library": "^6.1.2",
-    "replace-in-file": "^3.4.4",
-    "serve": "^10.1.2",
-    "source-map-explorer": "^1.8.0",
-    "workbox-build": "^4.3.1"
+    "react-scripts": "^3.4.0",
+    "react-test-renderer": "^16.12.0",
+    "replace-in-file": "^5.0.2",
+    "serve": "^11.3.0",
+    "source-map-explorer": "^2.2.2",
+    "workbox-build": "^5.0.0"
   },
   "dependencies": {
-    "@sentry/browser": "^5.7.1",
-    "axios": "^0.18.1",
+    "@sentry/browser": "^5.12.1",
+    "axios": "^0.19.2",
     "connected-react-router": "^6.3.2",
     "d3-array": "^2.0.3",
     "d3-axis": "^1.0.12",
@@ -73,7 +74,7 @@
     "d3-transition": "^1.2.0",
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.7",
@@ -127,10 +128,17 @@
       "!src/utils/logger.js"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 10",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 10",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
