--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
     "jsx-a11y/label-has-for": "off",
     "import/no-named-as-default": "off",
     "no-console": "off",
+    "react/state-in-constructor": ["error", "never"],
+    "react/jsx-props-no-spreading": "off",
     "prettier/prettier": [
       "error",
       {
