--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "speed reading exercises"
   ],
   "devDependencies": {
-    "@babel/register": "^7.12.1",
-    "@storybook/addon-a11y": "^6.1.8",
-    "@storybook/addon-actions": "^6.1.8",
+    "@babel/register": "^7.12.10",
+    "@storybook/addon-a11y": "^6.1.11",
+    "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-console": "^1.2.2",
-    "@storybook/addon-controls": "6.1.8",
-    "@storybook/addon-docs": "^6.1.8",
-    "@storybook/addon-links": "^6.1.8",
-    "@storybook/addon-viewport": "^6.1.8",
-    "@storybook/addons": "^6.1.8",
+    "@storybook/addon-controls": "6.1.11",
+    "@storybook/addon-docs": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/addon-viewport": "^6.1.11",
+    "@storybook/addons": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.8",
+    "@storybook/react": "^6.1.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "axios-mock-adapter": "^1.19.0",
     "canvas": "2.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.14.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0",
+    "husky": "^4.3.5",
     "immutable": "^3.8.2",
     "jest-environment-jsdom-with-canvas": "git+https://github.com/arcatdmz/jest-environment-jsdom-with-canvas.git",
     "jsdom": "^13.2.0",
@@ -69,7 +69,7 @@
     ]
   },
   "dependencies": {
-    "@sentry/browser": "^5.27.6",
+    "@sentry/browser": "^5.29.0",
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
     "d3-array": "^2.8.0",
@@ -84,20 +84,20 @@
     "draft-js": "^0.11.7",
     "history": "^4.10.1",
     "html2canvas": "^1.0.0-rc.7",
+    "rc-slider": "^9.6.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^3.3.0",
-    "react-loadable": "^5.5.0",
     "react-localize-redux": "2.17.5",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regression": "^2.0.1",
-    "rheostat": "^2.2.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.86.0"
+    "semantic-ui-react": "2.0.1"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
