--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@storybook/addons": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "axios-mock-adapter": "^1.19.0",
     "canvas": "2.1.0",
     "cross-env": "^7.0.3",
@@ -43,7 +44,7 @@
     "jsdom": "^13.2.0",
     "jsdom-global": "^3.0.2",
     "lint-staged": "^10.5.2",
-    "msw": "^0.24.2",
+    "msw": "^0.25.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
@@ -71,7 +72,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.29.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
     "d3-array": "^2.8.0",
     "d3-axis": "^1.0.12",
@@ -134,7 +135,8 @@
       "!src/sw-build.js",
       "!src/polyfill/*",
       "!src/stories/*",
-      "!src/utils/logger.js"
+      "!src/utils/logger.js",
+      "!src/test/**/*"
     ]
   },
   "browserslist": {
